# call_me_maybe

./: .gitignore  CHECKLIST_REBUILD.md  Makefile  PROJECT_CHECKLIST.md  content_resolver.py  pyproject.toml
.github/workflows/: ci.yml
data/input/: function_calling_tests.json
llm_sdk/: __init__.py
src/: __init__.py  __main__.py  errors.py  input_loader.py  llm_client.py  models.py  vocab_loader.py
src/application/: __init__.py  input_loader.py
src/config/: __init__.py  paths.py  settings.py
src/domain/: __init__.py  errors.py  generation_types.py  models.py
src/engine/: __init__.py  constraint_engine.py  generation_engine.py  trace.py  value_candidates.py
src/infrastructure/: __init__.py  llm_client.py  vocab_loader.py
src/utils/: __init__.py  perf.py
src_mod/: __init__.py  __main__.py
src_mod/application/: __init__.py  serializer.py
src_mod/domain/: __init__.py  errors.py
src_mod/engine/: __init__.py  constraint_engine.py  generation_engine.py  value_candidates.py
