[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Function calling with constrained decoding for 42."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7,<3.0",
]

[dependency-groups]
dev = [
    "flake8>=7.0.0,<8.0.0",
    "mypy>=1.10.0,<2.0.0",
    "pytest>=8.0.0,<9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]